--- a/app/src/main/res/layout/prompt_rename.xml
+++ b/app/src/main/res/layout/prompt_rename.xml
@@ -1,25 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="8dp" >
+    android:padding="8dp">
 
     <TextView
         android:id="@+id/tvRenameLabel"
         style="@style/MoneroLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/prompt_rename"
         android:labelFor="@+id/etRename"
+        android:text="@string/prompt_rename"
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
-    <EditText
-        android:id="@+id/etRename"
-        style="@style/MoneroEdit"
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/etPassword"
+        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:imeOptions="normal"
-        android:inputType="text" />
+        android:layout_height="wrap_content">
 
+        <android.support.design.widget.TextInputEditText
+            android:id="@+id/etRename"
+            style="@style/MoneroEdit"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:imeOptions="normal"
+            android:inputType="text" />
+    </android.support.design.widget.TextInputLayout>
 </LinearLayout>
