--- a/app/src/main/res/layout/fragment_tx_info.xml
+++ b/app/src/main/res/layout/fragment_tx_info.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -225,14 +226,20 @@
                     android:padding="8sp"
                     android:text="@string/tx_notes" />
 
-                <EditText
-                    android:id="@+id/etTxNotes"
-                    style="@style/MoneroEdit"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:backgroundTint="@color/moneroGray"
-                    android:hint="@string/tx_notes_hint"
-                    android:inputType="textMultiLine" />
+                <android.support.design.widget.TextInputLayout
+                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <android.support.design.widget.TextInputEditText
+                        android:id="@+id/etTxNotes"
+                        style="@style/MoneroEdit"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:backgroundTint="@color/moneroGray"
+                        android:hint="@string/tx_notes_hint"
+                        android:inputType="textMultiLine" />
+                </android.support.design.widget.TextInputLayout>
             </TableRow>
 
             <TableRow>
