--- a/app/src/main/res/layout/prompt_ledger_seed.xml
+++ b/app/src/main/res/layout/prompt_ledger_seed.xml
@@ -20,12 +20,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
-        android:textColor="@color/colorAccent"
         android:labelFor="@+id/etSeed"
-        android:text="@string/prompt_ledger_seed_warn" />
+        android:text="@string/prompt_ledger_seed_warn"
+        android:textColor="@color/colorAccent" />
 
     <android.support.design.widget.TextInputLayout
         android:id="@+id/etSeed"
+        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:errorEnabled="true">
@@ -42,6 +43,7 @@
 
     <android.support.design.widget.TextInputLayout
         android:id="@+id/etPassphrase"
+        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:errorEnabled="true">
