--- a/app/src/main/res/layout/view_exchange_btc_edit.xml
+++ b/app/src/main/res/layout/view_exchange_btc_edit.xml
@@ -17,21 +17,27 @@
             android:gravity="center"
             android:textAlignment="center" />
 
-        <EditText
-            android:id="@+id/etAmountA"
-            style="@style/MoneroText.Balance.Orange"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center|start"
-            android:layout_marginStart="16dp"
-            android:layout_weight="3"
-            android:hint="@string/send_amount_hint"
-            android:imeOptions="actionDone"
-            android:inputType="numberDecimal"
-            android:padding="4dp"
-            android:singleLine="true"
-            android:textAlignment="textStart"
-            tools:text="87.00000" />
+        <android.support.design.widget.TextInputLayout
+            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <android.support.design.widget.TextInputEditText
+                android:id="@+id/etAmountA"
+                style="@style/MoneroText.Balance.Orange"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center|start"
+                android:layout_marginStart="16dp"
+                android:layout_weight="3"
+                android:hint="@string/send_amount_hint"
+                android:imeOptions="actionDone"
+                android:inputType="numberDecimal"
+                android:padding="4dp"
+                android:singleLine="true"
+                android:textAlignment="textStart"
+                tools:text="87.00000" />
+        </android.support.design.widget.TextInputLayout>
     </LinearLayout>
 
     <LinearLayout
