--- a/app/src/main/res/layout/view_exchange_edit.xml
+++ b/app/src/main/res/layout/view_exchange_edit.xml
@@ -26,12 +26,11 @@
             <android.support.design.widget.TextInputEditText
                 android:id="@+id/etAmountA"
                 style="@style/MoneroText.Balance.Orange"
-                android:layout_width="0dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center|start"
                 android:layout_marginStart="16dp"
                 android:layout_weight="3"
-                android:hint="@string/send_amount_hint"
                 android:imeOptions="actionDone"
                 android:inputType="numberDecimal"
                 android:padding="4dp"
@@ -65,7 +64,6 @@
             android:layout_gravity="center|start"
             android:layout_marginStart="16dp"
             android:layout_weight="3"
-            android:hint="@string/send_amount_hint"
             android:padding="4dp"
             android:singleLine="true"
             tools:text="87.00000" />
