--- a/app/src/main/res/layout/fragment_generate.xml
+++ b/app/src/main/res/layout/fragment_generate.xml
@@ -34,7 +34,7 @@
             style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="4dp"
+            android:layout_marginBottom="@dimen/header_top_first"
             app:errorEnabled="true">
 
             <android.support.design.widget.TextInputEditText
@@ -74,6 +74,7 @@
             style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/header_top_first"
             android:visibility="gone"
             app:errorEnabled="true">
 
@@ -92,6 +93,7 @@
             style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/header_top_first"
             android:visibility="gone"
             app:counterEnabled="true"
             app:counterMaxLength="95"
@@ -112,6 +114,7 @@
             style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/header_top_first"
             android:visibility="gone"
             app:counterEnabled="true"
             app:counterMaxLength="64"
@@ -132,6 +135,7 @@
             style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/header_top_first"
             android:visibility="gone"
             app:counterEnabled="true"
             app:counterMaxLength="64"
@@ -152,6 +156,7 @@
             style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/header_top_first"
             android:visibility="gone"
             app:errorEnabled="true">
 
