Updating Ukranian language

--- a/app/src/main/res/values-ua/about.xml
+++ b/app/src/main/res/values-ua/about.xml
@@ -5,7 +5,7 @@
     <string name="about_version">Версія %1$s (%2$d)</string>
 
     <string name="credits_text"><![CDATA[
-        <b>Інформація</b>
+        <b>Подяка</b>
         <br/>
         m2049r, baltsar777, anhdres, keejef,
         rehrar, EarlOfEgo et al.
@@ -19,17 +19,17 @@
         використання і розкриття ваших особистих даних, які ми отримуємо
         від користувачів додатку (monerujo: Monero Wallet).
 		    </p>
-        <p>Використовуючи додаток, ви погоджуєтеся на збір і використання
+        <p>Використовуючи додаток, ви погоджуєтесь на збір і використання
         інформації відповідно до даної політики.
         </p>
         <h2>Зібрані дані</h2>
         <p>Особистими даними є будь-які дані, які дозволяють
         ідентифікувати вас як особистість.</p>
-        <p>Додаток локально збирає і обробляє ключі і публічні адреси Monero
-        з метою обробки транзакцій і їх передачі в мережу Monero в зашифрованій формі.
+        <p>Додаток локально збирає і обробляє ключі, і публічні адреси Monero
+        з метою обробки транзакцій та їх передачі в мережу Monero в зашифрованій формі.
         </p>
         <p>Додаток не збирає будь-яких інших особистих даних.</p>
-        <p>Якщо ви використовуєте функцію обміну (необовязково), monerujo отримує обмінний
+        <p>Якщо ви використовуєте функцію обміну (необов&apos;язково), monerujo отримує обмінний
         курс через публічний API coinmarketcap.com.
         Перейдіть за адресою https://coinmarketcap.com/privacy для отримання детальної
         інформації про те, як збираються ваші персональні дані в запитах.</p>
@@ -48,7 +48,7 @@
         <h2>Зміни в політиці конфіденційності</h2>
         <p>У дані положення політики конфіденційності періодично можуть
         вноситися зміни. У разі внесення таких змін, нові положення
-        будуть опубліковані в додатку і на вебсайті (www.monerujo.io).
+        будуть опубліковані в додатку, і на вебсайті (www.monerujo.io).
         Рекомендується періодично перевіряти положення політики
         конфіденційності на предмет внесення змін.
         <p>Дата останнього оновлення положень політики конфіденційності: 10.11.2017
