--- a/app/src/main/res/values-uk/help-uk.xml
+++ b/app/src/main/res/values-uk/help-uk.xml
@@ -3,7 +3,7 @@
     <string name="help_create_new"><![CDATA[
         <h1>Створити гаманець - Новий</h1>
         <p>Якщо вам потрібна нова адреса Monero!</p>
-        <p>Введіть унікальне і&apos;мя та пароль гаманця.
+        <p>Введіть унікальне і\'мя та пароль гаманця.
         Пароль використовується для захисту даних вашого гаманця на Android пристрої.
         Необхідно використовувати надійний пароль. Краще навіть використовувати фразу-пароль.
         </p>
@@ -24,7 +24,7 @@
     <string name="help_create_seed"><![CDATA[
         <h1>Створити гаманець - Фраза</h1>
         <p>Що робити, якщо у вас вже є адреса Monero, і ви хочете відновити транзакції з блокчейну.</p>
-        <p>Необхідно ввести унікальні ім&apos;я і пароль гаманця. Пароль використовується для захисту даних вашого
+        <p>Необхідно ввести унікальні ім\'я і пароль гаманця. Пароль використовується для захисту даних вашого
         гаманця на пристрої. Необхідно використовувати надійний пароль. Краще навіть використовувати фразу-пароль.</p>
         <p>Ввести фразу в поле \"Мнемонічна фраза\".<p>
         <p>Якщо вам відомий номер блоку першої транзакції, який використовувався з цією адресою, слід
@@ -35,7 +35,7 @@
     <string name="help_create_keys"><![CDATA[
         <h1>Створити гаманець - Ключі</h1>
         <p>Якщо ви хочете відновити свій гаманець за допомогою ключів!</p>
-        <p>Необхідно ввести унікальні і&apos;мя і пароль гаманця. Пароль використовується для захисту даних вашого
+        <p>Необхідно ввести унікальні і\'мя і пароль гаманця. Пароль використовується для захисту даних вашого
         гаманця на пристрої. Необхідно використовувати надійний пароль. Краще навіть використовувати фразу-пароль.<p>
         <p>Введіть вашу Monero адресу в поле \"Публічна адреса\", заповніть поле \"Ключ перегляду \" і \"Ключ витрати \".</p>
         <p>Якщо вам відомий номер блоку першої транзакції, який використовувався з цією адресою, слід
@@ -46,7 +46,7 @@
     <string name="help_create_view"><![CDATA[
         <h1>Створити гаманець - Перегляд</h1>
         <p>Якщо ви просто хочете переглядати вхідні транзакції в гаманці!</p>
-        <p>Необхідно ввести унікальні і&apos;мя і пароль гаманця. Пароль використовується для захисту даних вашого
+        <p>Необхідно ввести унікальні і\'мя і пароль гаманця. Пароль використовується для захисту даних вашого
         гаманця на пристрої. Необхідно використовувати надійний пароль. Краще навіть використовувати фразу-пароль.<p>
         <p>Введіть вашу Monero адресу в поле \"Публічний адресу\", заповніть поле \"Ключ перегляду\".</p>
         <p>Якщо вам відомий номер блоку першої транзакції, який використовувався з цією адресою, слід
@@ -83,23 +83,23 @@
         або при появі у вас нового телефону), або ж вам захочеться використовувати файли вашого гаманця на
         іншому пристрої або ПК, ви зможете використовувати цей пароль відновлення, щоб знову отримати доступ до вашого гаманця.<br/>
         Для того щоб вибрати іншу фразу-пароль, необхідно вибрати \"Змінити пароль\" в меню.
-        Слід пам&apos;ятати про те, що при цьому буде згенеровано новий пароль відновлення. Запишіть його!
+        Слід пам\'ятати про те, що при цьому буде згенеровано новий пароль відновлення. Запишіть його!
         <h2>Ключ перегляду</h2>
         Ваш ключ перегляду може використовуватися для перегляду вхідних транзакцій у ваш гаманець без дозволу
         на витрату коштів, що знаходяться у ньому.
         <h2>Ключ витрати</h2>
-        Ваш ключ витрати дозволяє будь-кому витратити Monero, пов&apos;язані з вашим гаманцем, тому не слід повідомляти
+        Ваш ключ витрати дозволяє будь-кому витратити Monero, пов\'язані з вашим гаманцем, тому не слід повідомляти
         кому-небудь цей ключ. Як і мнемонічну фразу, його слід тримати в безпечному місці.
     ]]></string>
 
     <string name="help_list"><![CDATA[
         <h1>Перелік термінів</h1>
         <h2>Віддалений вузол</h2>
-        <p>Для зв&apos;язку з мережею Monero, без завантаження і збереження копії усього блокчейну, Monerujo використовує
+        <p>Для зв\'язку з мережею Monero, без завантаження і збереження копії усього блокчейну, Monerujo використовує
         віддалений вузол. Список популярних віддалених вузлів і інформацію про те, як запустити власний
         віддалений вузол, можна знайти тут: https://moneroworld.com<p>
-        <p>Monerujo має деякі попередньо встановлені віддалені вузли. Також гаманець запам&apos;ятовує
-        п&apos;ять останніх використаних вузлів.</p>
+        <p>Monerujo має деякі попередньо встановлені віддалені вузли. Також гаманець запам\'ятовує
+        п\'ять останніх використаних вузлів.</p>
         <h2>Гаманці</h2>
         <p>Тут ви можете переглядати гаманці. Вони знаходяться в папці Monerujo на внутрішньому накопичувачі
         вашого пристрою. Щоб переглянути їх, можна використати файловий менеджер. Необхідно на
@@ -157,7 +157,7 @@
         <p>XMR.TO є стороннім сервісом, який допомагає здійснювати обмін Monero на Bitcoin.
         Ми використовуємо API служби XMR.TO для включення платежів із впровадженням Bitcoin в Monerujo.
         Будь ласка, Відвідайте https://xmr.to, і виріште, чи хочете ви використовувати цю можливість.
-        Команда Monerujo НЕ пов&apos;язана з XMR.TO і не може допомогти вам в роботі з цією службою.</p>
+        Команда Monerujo НЕ пов\'язана з XMR.TO і не може допомогти вам в роботі з цією службою.</p>
         <h2>Курс обміну XMR.TO<h2>
         <p>На екрані \"Сума\" відображаються поточні параметри служби XMR.TO.
         Тут також відображається обмінний курс, верхня і нижня межа BTC. Необхідно відзначити,
@@ -173,7 +173,7 @@
         <p>Так як Monerujo відповідає за ту частину транзакції, яка пов$apos;язана з Monero, для відстеження
         вашого замовлення, яка пов$apos;язана з Bitcoin, можна використовувати секретний ключ на домашній сторінці
         XMR.TO.</p>
-        <p>Слід пам&apos;ятати про те, що такий секретний ключ дійсний тільки протягом 24 годин після
+        <p>Слід пам\'ятати про те, що такий секретний ключ дійсний тільки протягом 24 годин після
         створення транзакції!</p>
         <h2>Зворотній відлік XMR.TO</h2>
         <p>Як тільки зворотний відлік досягне нульової точки, вам знадобиться отримати від XMR.TO нову
@@ -202,7 +202,7 @@
         <p>Так як Monerujo відповідає за ту частину транзакції, яка пов$apos;язана з Monero, для відстеження
         вашої заявки, яка пов$apos;язана з Bitcoin, можна використовувати секретний ключ на домашній сторінці
         XMR.TO.</p>
-        <p>Слід пам&apos;ятати про те, що такий секретний ключ дійсний тільки протягом 24 годин після
+        <p>Слід пам\'ятати про те, що такий секретний ключ дійсний тільки протягом 24 годин після
          початку транзакції!</p>
         <h2>Зворотній відлік XMR.TO</h2>
         <p>Як тільки зворотний відлік досягне нульової точки, вам знадобиться отримати від XMR.TO нову
@@ -250,7 +250,7 @@
         <p>Обновіть ваш список вузлів, потягнувши вниз в розділі &amp; закладок 3&#8211;5 , щоб Monerujo
         міг вибрати найкращий вузол для вас!</p>
         <h2>Що таке віддалені вузли?</h2>
-        <p>Monerujo використовує віддалені вузли (також їх ще називають Daemon), для зв&apos;язку з мережею
+        <p>Monerujo використовує віддалені вузли (також їх ще називають Daemon), для зв\'язку з мережею
         Monero без необхідності завантажувати і зберігати копію всього блокчейну на на пристрої.<p>
         <h2>Список Вузлів</h2>
         <p>Якщо список пустий, можете добавити нові вузли вручну або дозволити Monerujo
@@ -268,10 +268,10 @@
         перевагу при підключенні. В нижній частині списку будуть відображатися повільні або недоступні вузли.</p>
         <h2>Додати Вузол</h2>
         <p>Натиснувши кнопку &quot;Добавити Вузол&quot; вам буде запропоновано ввести дані вузла в наступному діалогову вікні.
-        &quot;Адреса&quot; ім&apos;я хоста або IP-адреса вузла - це єдиний обов&apos;язковий параметр.
+        &quot;Адреса&quot; ім\'я хоста або IP-адреса вузла - це єдиний обов\'язковий параметр.
         Введіть &quot;Порт&quot; якщо вузол працює на нестандартному порті (наприклад, 18089).
-        Ви також можете задати ім&apos;я для вузла, це може допомоги при його пошуку в списку.
-        Для використання деяких вузлів потрібні облікові дані. Введіть ім&apos;я користувача &amp;
+        Ви також можете задати ім\'я для вузла, це може допомоги при його пошуку в списку.
+        Для використання деяких вузлів потрібні облікові дані. Введіть ім\'я користувача &amp;
         і пароль у відповідних полях. Тепер ви можете &quot;Провірити&quot; ці налаштування.
         В &quot;Результатах Перевірки&quot; буде відображатися висота блоку, час відповіді і фактична IP-адреса.
         Також, результатом провірки може бути помилка, зазвичай тому, що введена адреса не відповіла в заданий час, або введені дані просто невірні.
