--- a/app/src/main/res/layout/activity_on_boarding.xml
+++ b/app/src/main/res/layout/activity_on_boarding.xml
@@ -22,7 +22,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
-    <android.support.v4.view.ViewPager
+    <com.m2049r.xmrwallet.onboarding.OnBoardingViewPager
         android:id="@+id/pager"
         android:layout_width="0dp"
         android:layout_height="0dp"
