rework node handling

--- a/app/src/main/res/drawable/selector_login.xml
+++ b/app/src/main/res/drawable/selector_login.xml
@@ -6,6 +6,12 @@
         </shape>
     </item>
 
+    <item android:state_selected="true">
+        <shape>
+            <solid android:color="@color/monerujoPinkAlpha" />
+        </shape>
+    </item>
+
     <item android:state_pressed="false">
         <shape>
             <solid android:color="@android:color/transparent" />
