--- a/app/src/main/res/layout/item_node.xml
+++ b/app/src/main/res/layout/item_node.xml
@@ -7,18 +7,31 @@
     android:layout_marginEnd="8dp"
     android:background="@drawable/selector_login">
 
-    <ImageButton
-        android:id="@+id/ibBookmark"
+    <FrameLayout
+        android:id="@+id/flBookmark"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
-        android:layout_centerInParent="true"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        android:padding="12dp"
-        android:background="?android:attr/selectableItemBackgroundBorderless"
-        android:gravity="center"
-        android:src="@drawable/ic_favorite_border_24dp" />
+        android:layout_centerInParent="true">
+
+        <ImageButton
+            android:id="@+id/ibBookmark"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
+            android:background="?android:attr/selectableItemBackgroundBorderless"
+            android:gravity="center"
+            android:padding="12dp"
+            android:src="@drawable/ic_favorite_border_24dp" />
+
+        <ProgressBar
+            android:id="@+id/pbBookmark"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:visibility="invisible" />
+
+    </FrameLayout>
 
     <LinearLayout
         android:id="@+id/llNode"
@@ -28,7 +41,7 @@
         android:layout_centerInParent="true"
         android:layout_margin="8dp"
         android:layout_toStartOf="@+id/ivPing"
-        android:layout_toEndOf="@id/ibBookmark"
+        android:layout_toEndOf="@id/flBookmark"
         android:gravity="start"
         android:orientation="vertical">
 
