--- a/app/src/main/res/values-fa/about.xml
+++ b/app/src/main/res/values-fa/about.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources xmlns:tools="http://schemas.android.com/tools" tools:locale="en">
-    <string name="about_close">Close</string>
-    <string name="about_whoami">I am monerujo</string>
-    <string name="about_version">Version %1$s (%2$d)</string>
+
+    <string name="about_close">بستن</string>
+    <string name="about_whoami">من Monerujo هستم</string>
+    <string name="about_version"> %1$s (%2$d) نسخه</string>
 
     <string name="credits_text"><![CDATA[
-        <b>Credits</b>
+        <b>سازندگان</b>
         <br/>
         m2049r, baltsar777, anhdres, keejef,
         rehrar, EarlOfEgo, ErCiccione et al.
@@ -14,48 +14,48 @@
         ]]></string>
 
     <string name="privacy_policy"><![CDATA[
-        <h1>Privacy Policy</h1>
-        <p>This page informs you of our policies regarding the collection,
-        use and disclosure of personal information we receive from users of our
-        app (monerujo: Monero Wallet).
+        <h1>سیاست حفظ حریم خصوصی</h1>
+        <p> این صفحه مربوط به سیاست های ما در مورد جمع آوری، استفاده
+و افشای اطلاعات شخصی که از کاربران خود در برنامه
+ما (monerujo: Monero Wallet) است، می باشد
         </p>
-        <p>By using the app, you agree to the collection and use of information in
-        accordance with this policy.
+        <p>در صورت استفاده از این برنامه، شما با جمع آوری و استفاده
+از اطلاعاتتان مطابق این سیاست ها موافقت می کنید
         </p>
-        <h2>Data Collected</h2>
-        <p>Personal data is any kind of data that could identify an individual.
+        <h2>اطلاعات جمع آوری شده</h2>
+        <p>به هر نوع اطلاعاتی که می تواند هویت فردی را مشخص کند، اطلاعات شخصی گفته می شود
         </p>
-        <p>Monero keys and public addresses are collected and processed by the app locally
-        for the purpose of processing transactions and transmitted into the Monero Network
-        in encrypted form.
+        <p> کلید های مونرو و آدرس های عمومی برای پردازش
+تراکنش ها و ارسال به شبکه مونرو توسط این برنامه به
+صورت رمزنگاری شده و محلی جمع آوری و پردازش می شوند
         </p>
-        <p>Other personal data is not collected by the app.</p>
-        <p>If you use the exchange (optional) functionality, monerujo fetches the exchange
-        rate through the public API of coinmarketcap.com.
-        See their privacy policy at https://coinmarketcap.com/privacy for
-        details on how data in your requests is collected.</p>
-        <p>If you use the app to pay to BTC addresses, you will be using the XMR.TO service.
-        See their privacy policy at https://xmr.to/ for details. Monerujo send them the BTC
-        destination address and amount. Your IP will also be collectable.</p>
-        <h2>App Permissions</h2>
+        <p>سایر اطلاعات شخصی توسط این برنامه جمع آوری نمی شوند</p>
+        <p>اگر از قابلیت مبادله ارز (اختیاری) استفاده می کنید، monerujo نرخ تبدیل را 
+از API عمومی coinmarketcap.com دریافت می کند.
+برای مشاهده سیاست حفظ حریم خصوصی آنها و جزئيات مربوط به نحوه جمع آوری
+اطلاعات درخواست های شما به https://coinmarketcap.com/privacy مراجعه کنید</p>
+        <p>اگر از این برنامه برای پرداخت به آدرس های بیتکوین استفاده کنید، درحقيقت از برنامه XMR.TO استفاده کرده اید
+برای مشاهده جزئیات، به صفحه حفظ حریم خصوصی آنها در https://xmr.to مراجعه کنید. Monerujo برای آنها
+آدرس بیت کوین مقصد و مقدار را برای آنها ارسال می کند. IP شما نیز قابل مشاهده است</p>
+        <h2>مجوز های برنامه</h2>
         <ul>
-        <li>INTERNET : Connect to the Monero Network via a Monero Daemon Node</li>
-        <li>READ_EXTERNAL_STORAGE : Read wallet files stored on the device</li>
-        <li>WRITE_EXTERNAL_STORAGE : Write wallet files stored on the device</li>
-        <li>WAKE_LOCK : Keep device awake while syncing</li>
-        <li>CAMERA : Scan QR Codes for receiving Monero</li>
+        <li>INTERNET : اتصال به شبکه مونرو توسط یک نود مونرو</li>
+        <li>READ_EXTERNAL_STORAGE : خواندن فایل های مربوط به کیف پول ذخیره شده در دستگاه</li>
+        <li>WRITE_EXTERNAL_STORAGE : نوشتن فایل های مربوط به کیف پول ذخیره شده در دستگاه</li>
+        <li>WAKE_LOCK : روشن نگه داشتن دستگاه، هنگام همگام سازی</li>
+        <li>CAMERA : اسکن کد QR برای دریافت مونرو</li>
         </ul>
-        <h2>Changes to this Privacy Policy</h2>
-        <p>We may update this privacy policy from time to time. We will notify
-        you of any changes by posting the new privacy policy in the app and on the
-        website (www.monerujo.io)
-        You are advised to review this privacy policy periodically for any changes.
-        <p>This Privacy Policy was last updated: 10th November, 2017.
+        <h2>تغییرات در این سیاست حفظ حریم خصوصی</h2>
+        <p>گاهی ممکن است این سیاست حفظ حریم خصوصی را به روز کنیم
+        ما با ارسال سیاست حفظ حریم خصوصی جدید در این برنامه و 
+وبسایت(monerujo.io) ، هرگونه تغییری را به شما اطلاع خواهیم داد.
+        به شما توصیه می شود این سیاست حفظ حریم خصوصی را به صورت دوره ای برای هرگونه تغییری بررسی کنید.
+        <p>این سیاست حفظ حریم خصوصی آخرین بار در تاریخ 10 نوامبر 2017 به روز شده است
         </p>
-        <h2>Contact Us</h2>
-        <p>If you have any questions about our privacy policy,
-        or how your data is being collected and processed,
-        please e-mail privacy@monerujo.io.
+        <h2>تماس با ما</h2>
+        <p> اگر درمورد سیاست حفظ حریم خصوصی ما یا نحوه
+جمع آوری و پردازش اطلاعات شما سوالی دارید،
+ لطفا از این ایمیل استفاده کنید privacy@monerujo.io
         </p>
         ]]></string>
 </resources>
